--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@
   --dark_grey: #3E3634;
   --light_grey: #F6F6F6;
   --text_grey: #838383;
+  --border-grey: #E9E9E9;
   --background_gradient: linear-gradient(77deg, #292726 0%, rgba(0, 0, 0, 0.85) 100%, rgba(0, 0, 0, 0.00) 100%);
   --background_black: #1D1715;
 }
@@ -177,7 +178,9 @@ li {
 .lh14 {
   line-height: 14px;
 }
-
+.lh17 {
+  line-height: 17px;
+}
 .lh13 {
   line-height: 13px;
 }
@@ -189,11 +192,17 @@ li {
 .lh32 {
   line-height: 32px;
 }
+.lh38 {
+  line-height: 38px;
+}
 .lh22 {
   line-height: 22px;
 }
 .lh24 {
   line-height: 24.6px;
+}
+.lh45 {
+  line-height: 45px;
 }
 
 
@@ -280,6 +289,15 @@ li {
   font-size: 50px;
   font-weight: 700;
   line-height: 64px;
+}
+.input {
+  border: 1px solid #FFFFFF;
+  border-radius: 7px;
+  color: var(--text_grey);
+  background-color: var(--white);
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
 }
 
 /* !header */
@@ -548,8 +566,8 @@ li {
 }
 .scheme {
   display: grid;
-  gap: 10px;
-  grid-template-columns: 33% 33% 33%;
+  gap: 15px;
+  grid-template-columns: repeat(3, 1fr);;
   grid-template-rows: repeat(11, 1fr)
 }
 .scheme .blue-block {
@@ -571,7 +589,6 @@ li {
 
 .scheme__two{
   order: 5;
-  /* grid-row: 3/5; */
   grid-area: 3 / 3 / 6 / 4;
 }
 .scheme__three{
@@ -584,21 +601,29 @@ li {
   position: absolute;
 }
 .three__info {
+  max-width: 427px;
+  width: auto;
   position: relative;
   bottom: -68px;
   right: -33%;
 }
-.three__info .note__text {
+/* .three__info .note__text {
   max-width: 409px;
-}
+} */
 
 .scheme__four{
   order: 6;
   grid-area: 6 / 3 / 9 / 4; 
 }
+.four__info {
+  max-width: 270px;
+  width: auto;
+  position: relative;
+    bottom: -70px;
+    right: -11%;
+}
 .scheme__five{
   order: 4;
-  /* grid-row: 3/9; */
   grid-area: 3 / 2 / 10 / 3; 
 }
 .scheme__six{
@@ -607,30 +632,442 @@ li {
   align-self: center;
     justify-self: end;
 }
-.scheme__six .grey-block {
+.scheme__three .grey-block,
+.scheme__four .grey-block,
+.scheme__five .grey-block,
+.scheme__six .grey-block,
+.scheme__seven .grey-block {
   position: absolute;
 }
 .six__info {
-  position: relative;
-  bottom: -68px;
-  left: -33%;
-}
-.six__info .note__text {
   max-width: 322px;
+  width: auto;
+  position: relative;
+  bottom: -74px;
+  left: -20%;
 }
+/* .six__info .note__text {
+  max-width: 322px;
+} */
 
 .scheme__seven{
   order: 8;
   grid-area: 10 / 2 / 12 / 3;
+  align-self: start;
+    justify-self: center;
+}
+.seven__info {
+  width: auto;
+  max-width: 262px;
+  position: relative;
+  right: -50px;
+  bottom: -75px;
 }
 .scheme__eigth{
   order: 7;
   grid-area: 8 / 1 / 12 / 2;
 }
-.scheme__nine{
-  order: 9;
-  grid-area: 9 / 3 / 12 / 4; 
+.eigth__info {
+  width: auto;
+    max-width: 277px;
+    position: relative;
+    bottom: -28px;
+    right: -37px;
 }
+.scheme__nine{
+  max-width: 292px;
+  height: fit-content;
+  order: 9;
+  grid-area: 9 / 3 / 12 / 4;
+  align-self: start;
+    justify-self: center; 
+}
+
+
+
+
+
+/* ! steps */
+
+.setting {
+  background-color: var(--background_black);
+  background-image: url('../img/section4_background.png');
+  background-repeat: no-repeat;
+    background-position: top;
+    /* background-size: contain; */
+}
+.setting__container {
+  max-width: 1124px;
+  padding-top: 62px;
+  padding-bottom: 50px;
+}
+.setting__title {
+  max-width: 870px;
+  margin-bottom: 7px;
+  color: var(--white);
+}
+.steps__list {
+  display: flex;
+  gap: 15px;
+}
+.steps__item {
+  display: flex;
+  gap: 12px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.steps__text {
+  max-width: 188px;
+  min-height: 54px;
+  display: flex;
+  gap: 5px;
+  color: var(--white);
+}
+
+/* ! benefits */
+
+.benefits {
+  background-color: var(--light_grey);
+}
+.benefits__container {
+padding-top: 105px;
+padding-bottom: 93px;
+max-width: 1386px;
+}
+.benefits__heading {
+  margin-bottom: 83px;
+  display: flex;
+  gap: 51px;
+}
+
+.benefits__img {
+  width: 157px;
+height: 157px;
+border-radius: 50%;
+}
+.benefits__title {
+  max-width: 901px;
+  font-size: 50px;
+  line-height: 48px;
+}
+
+.table {
+  padding: 70px 60px 46px;
+  background-color: var(--white);
+}
+.table__first-line,
+.table__second-line,
+.table__third-line,
+.table__fours-line,
+.table__fives-line {
+  display: flex;
+  gap: 15px;
+}
+.table__second-line,
+.table__third-line {
+  margin-bottom: 23px;
+}
+.green-text {
+  color: var(--green);
+}
+.grey-text {
+  color: var(--text_grey);
+}
+.table__subtitle {
+  margin-bottom: 19px;
+}
+.table__cell {
+  min-height: 133px;
+  padding: 14px 8px 53px 0;
+  border-right: 1px solid var(--border-grey);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+  flex-basis: 32%;
+}
+.table__cell:nth-child(3n),
+.table__first-line .table__cell {
+  border-right: none;
+}
+.table__first-line .table__cell {
+  min-height: 172px;
+}
+.table__first-line .table__name {
+  max-width: fit-content;
+}
+.table__fours-line .table__cell {
+  min-height: 120px;
+}
+.table__fives-line .table__cell {
+  padding: 0 8px 0 21px;
+}
+.pl5 {
+  padding-left: 5%;
+}
+.table__img {
+  max-width: 139px;
+}
+.table__name {
+  max-width: 159px;
+}
+.table__list {
+  list-style-image: url('../img/check_orange.svg');
+}
+.table__list-grey {
+  list-style-image: url('../img/check_grey.svg');
+}
+
+
+/* ! photos */
+.photos__container {
+  padding-top: 76px;
+  padding-bottom: 43px;
+}
+.photos__top {
+  position: relative;
+  display: flex;
+  margin-bottom: 80px;
+}
+
+.photos__img {
+  position: absolute;
+  left: -115px;
+  top: -25px;
+}
+.photos__heading {
+  margin-left: 146px;
+  max-width: 46%;
+}
+.photos__customer {
+  align-self: end;
+}
+.customer__top {
+  margin-bottom: 15px;
+  display: flex;
+  gap: 33px;
+}
+.customer__img {
+  width: 99px;
+  height: 99px;
+  border-radius: 50%;
+}
+
+
+.foto__content {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: space-around;
+  margin-bottom: 70px;
+}
+.foto__img {
+  max-width: 164px;
+  flex: 1 1 15%;
+}
+.foto__more {
+  display: block;
+  width: 40px;
+  height: 46px;
+  margin: auto;
+  padding: 0;
+  background-color: var(--white);
+  border: none;
+  border-bottom: 1px dashed var(--black);
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+
+
+/* ! feedback */
+.feedback {
+  background-color: var(--light_grey)
+}
+.feedback__container {
+  padding-top: 38px;
+  padding-bottom: 57px;
+  position: relative;
+}
+.feedback__name {
+  width: 211px;
+}
+.feedback__title {
+  max-width: 94%;
+  margin-bottom: 74px;
+}
+.feedback__stars {
+  position: absolute;
+  right: 100px;
+  top: 200px;
+  max-width: 43%;
+}
+
+.feedback__subtitle {
+  margin-bottom: 54px;
+}
+.feedback__video {
+  display: flex;
+  gap: 21px;
+  margin-bottom: 74px;
+}
+.white-block {
+  width: 50%;
+  padding: 43px 42px 30px 50px;
+  border-radius: 24px;
+  background-color: var(--white);
+}
+.video__text {
+  margin-bottom: 24px;
+}
+.video__img {
+  position: relative;
+  margin-bottom: 23px;
+}
+.video__button {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.video__play {
+  width: 67px;
+}
+.men {
+  display: flex;
+  gap: 15px;
+}
+.men__img {
+  height: 70px;
+}
+.men__info {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+.youtube {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+} 
+.youtube__icon {
+  max-height: 26px;
+}
+.feedback__reviews {
+  display: flex;
+  gap: 21px;
+  margin-bottom: 74px;
+}
+.reviews__men {
+  margin-bottom: 40px;
+  align-items: center;
+}
+.reviews__img {
+  margin-bottom: 66px;
+  display: flex;
+  gap: 10px;
+}
+.reviews__block {
+  display: flex;
+flex-direction: column;
+  gap: 10px;
+  margin-bottom: 16px;
+}
+.feedback__shopping {
+  justify-content: center;
+}
+
+
+/* ! calc */
+.calc {
+  background-color: var(--light_grey)
+}
+
+.calc__container {
+  padding-top: 49px;
+  padding-bottom: 75px;
+  position: relative;
+}
+.calc__top{
+margin-bottom: 41px;
+  display: flex;
+  gap: 30px;
+}
+.calc__title {
+  width: 63%;
+}
+.calc__aside{
+  width: 34%;
+}
+.aside {
+  position: relative;
+  min-width: 344px;
+  height: fit-content;
+  padding: 24px 46px;
+}
+.aside__icon {
+  position: absolute;
+    top: 15px;
+    left: 3px;
+}
+.aside__img {
+  position: absolute;
+  bottom: 0;
+  right: 20px;
+}
+.calc__img {
+  width: 48%;
+}
+.calc__calculate {
+  align-self: center;
+}
+.calc__content {
+  display: flex;
+}
+.calculate__form {
+  width: 70%;
+  margin: auto;
+}
+.form__inputs {
+  display: flex;
+  gap: 15px;
+  margin-bottom: 134px;
+}
+.form__size, .form__square {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.input__size, .input__square {
+  max-width: 180px;
+  padding: 9px 42px;
+  border: 2px solid var(--orange);
+  color: var(--orange);
+}
+.calculate__btn {
+  margin: auto;
+}
+
+
+
+/* ! set */
+.set__container {
+  padding-top: 87px;
+  padding-bottom: 54px;
+}
+
+
+
+
+
+
 
 
 
@@ -2321,17 +2758,6 @@ li {
   height: 70px;
 }
 
-.input {
-  padding: 24px 31px;
-  border: 1px solid #FFFFFF;
-  border-radius: 40px;
-  color: var(--white);
-  background-color: var(--black);
-  line-height: 20px;
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
-}
 
 .just-validate-error-field {
   border-color: var(--error);
