--- a/css/styleWholesalers.css
+++ b/css/styleWholesalers.css
@@ -212,8 +212,9 @@ li {
   line-height: 45px;
 }
 
+
 .btn {
-  padding: 23px 58px;
+  padding: 23px 33px;
   border-radius: 12px;
   cursor: pointer;
   -webkit-transition: 0.3s;
@@ -390,6 +391,7 @@ li {
   color: var(--orange);
 }
 
+
 .contacts {
   width: 155px;
   display: flex;
@@ -436,16 +438,23 @@ li {
 }
 
 .main__title {
-  width: 585px;
+  width: 100%;
   padding-bottom: 105px;
 }
 
-.main__question {
+.main__link {
   position: absolute;
   right: 0;
-  bottom: 44px;
-  width: 440px;
-  height: 105px;
+  bottom: 125px;
+  width: 23%;
+  font-weight: 400;
+  text-decoration: underline;
+}
+
+.main__link img {
+  position: absolute;
+  right: -51px;
+  top: 5px;
 }
 
 .tooltip {
@@ -517,6 +526,7 @@ li {
 .shopping {
   display: flex;
   gap: 15px;
+  text-align: center;
 }
 
 .main__btn {
@@ -534,7 +544,7 @@ li {
 .do__item {
   position: relative;
   flex: 1 1 30%;
-  padding: 17px 25px;
+  padding: 23px 39px;
   border-radius: 11px;
   background: var(--white);
   z-index: 2;
@@ -778,48 +788,6 @@ li {
   justify-self: center;
 }
 
-/* ! steps */
-
-.setting {
-  background-color: var(--background_black);
-  background-image: url('../img/section4_background.png');
-  background-repeat: no-repeat;
-  background-position: top;
-}
-
-.setting__container {
-  max-width: 1124px;
-  padding-top: 62px;
-  padding-bottom: 50px;
-}
-
-.setting__title {
-  max-width: 870px;
-  margin-bottom: 7px;
-  color: var(--white);
-}
-
-.steps__list {
-  display: flex;
-  gap: 15px;
-}
-
-.steps__item {
-  display: flex;
-  gap: 12px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.steps__text {
-  max-width: 188px;
-  min-height: 54px;
-  display: flex;
-  gap: 5px;
-  color: var(--white);
-}
-
 
 /* ! benefits */
 .benefits {
@@ -833,9 +801,22 @@ li {
 }
 
 .benefits__heading {
+  position: relative;
   margin-bottom: 83px;
   display: flex;
   gap: 51px;
+}
+
+.benefits__info {
+  display: block;
+  position: absolute;
+  top: -29%;
+  right: -4%;
+  padding: 23px 23px;
+  transform: rotate(10.995deg);
+  border-radius: 27px;
+  color: var(--white);
+  background: var(--green);
 }
 
 .benefits__img {
@@ -845,7 +826,7 @@ li {
 }
 
 .benefits__title {
-  max-width: 901px;
+  max-width: 630px;
   font-size: 50px;
   line-height: 48px;
 }
@@ -1057,6 +1038,8 @@ li {
 
 .feedback__subtitle {
   padding-bottom: 54px;
+  color: var(--text_grey);
+  max-width: 80%;
 }
 
 .feedback__video {
@@ -1214,174 +1197,7 @@ li {
 }
 
 
-/* ! calc */
-.calc {
-  background-color: var(--light_grey)
-}
-
-.calc__container {
-  padding-top: 49px;
-  padding-bottom: 75px;
-  position: relative;
-}
-
-.calc__top {
-  margin-bottom: 41px;
-  display: flex;
-  gap: 30px;
-}
-
-.calc__title {
-  width: 63%;
-}
-
-.calc__aside {
-  width: 34%;
-}
-
-.aside {
-  position: relative;
-  min-width: 344px;
-  height: fit-content;
-  padding: 24px 46px;
-}
-
-.aside__icon {
-  position: absolute;
-  top: 15px;
-  left: 3px;
-}
-
-.aside__img {
-  position: absolute;
-  bottom: 0;
-  right: 20px;
-}
-
-.calc__img {
-  width: 48%;
-}
-
-.calc__calculate {
-  align-self: center;
-  flex-basis: 50%;
-}
-
-.calc__content {
-  display: flex;
-  gap: 20px;
-}
-
-.calculate__form {
-  width: 70%;
-  margin: auto;
-}
-
-.form__inputs {
-  display: flex;
-  gap: 15px;
-}
-
-.calculate__inputs {
-  margin-bottom: 80px;
-}
-
-.form__size,
-.form__square {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-
-.input__size,
-.input__square {
-  max-width: 180px;
-  padding: 9px 42px;
-  border: 2px solid var(--orange);
-  color: var(--orange);
-}
-
-.calculate__btn {
-  margin: auto;
-}
-
-
-/* ! set */
-.set__container {
-  padding-top: 87px;
-  padding-bottom: 54px;
-}
-
-.set__title {
-  width: 80%;
-  margin-bottom: 31px;
-}
-
-.set__content {
-  position: relative;
-}
-
-.set__info {
-  width: 47%;
-  padding-left: 20px;
-  padding-top: 24px;
-  margin-bottom: 74px;
-}
-
-.set__list {
-  padding-left: 30px;
-  margin-bottom: 90px;
-  display: flex;
-  flex-direction: column;
-  gap: 22px;
-  list-style-image: url('../img/check_orange.svg');
-}
-
-.set__price {
-  margin-bottom: 60px;
-}
-
-.price {
-  display: flex;
-  gap: 26px;
-  align-items: center;
-}
-
-.price__old {
-  color: var(--price-grey);
-}
-
-.set__side {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 50%;
-  height: 100%;
-}
-
-.side__img {
-  position: absolute;
-  top: 0%;
-  left: -8%;
-}
-
-.side__text {
-  position: absolute;
-  width: 211px;
-  right: -35px;
-  top: 0;
-  z-index: -1;
-}
-
-.side__play {
-  position: absolute;
-  top: 39%;
-  left: -10%;
-}
-
-
 /* !delivery */
-
 .delivery {
   padding-top: 50px;
   padding-bottom: 50px;
@@ -1520,6 +1336,7 @@ li {
   right: 49px;
 }
 
+
 .maps__info-active {
   display: block;
 }
@@ -1623,16 +1440,16 @@ li {
   left: calc(86.5% - 2.5%);
 }
 
-
 /* ! wholesale*/
+
 .wholesale {
   background: var(--background_gradient);
   overflow: hidden;
 }
 
 .wholesale__container {
-  padding-top: 42px;
-  padding-bottom: 7px;
+  padding-top: 100px;
+  padding-bottom: 100px;
   position: relative;
 }
 
@@ -1741,7 +1558,6 @@ li {
   bottom: -147px;
 }
 
-
 /* !footer */
 .footer {
   margin-bottom: 114px;
@@ -1783,6 +1599,7 @@ li {
   background-image: url('../img/footer.png');
   background-repeat: repeat-x;
 }
+
 
 @media (max-width: 1266px) {
   .eigth__info {
@@ -1831,16 +1648,22 @@ li {
   }
 
   /* !main */
+  .main__content {
+    position: initial;
+    margin-bottom: 55px;
+  }
+
   .main__container {
     padding-top: 25px;
   }
 
   .main__title {
-    padding-bottom: 120px;
+    padding-bottom: 40px;
   }
 
-  .main__question {
-    bottom: 8px;
+  .main__link {
+    position: relative;
+    bottom: 0;
   }
 
   .main__btn {
@@ -1912,26 +1735,6 @@ li {
     height: 50px;
   }
 
-  /* ! calculate*/
-  .calculate__form {
-    width: 100%;
-    margin: 0;
-    justify-content: center;
-  }
-
-  /* !set */
-  .setting {
-    background-size: contain;
-  }
-
-  .set__title {
-    width: 100%;
-  }
-
-  .side__img {
-    top: 13%;
-  }
-
   /* !delivery */
   .delivery__title {
     width: 100%;
@@ -1956,8 +1759,7 @@ li {
     width: 60%;
   }
 
-  /* ! */
-
+  /* ! parts*/
   .scheme {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -2060,6 +1862,13 @@ li {
   .benefits__container {
     padding-right: 50px;
     padding-left: 50px;
+  }
+
+  .benefits__info {
+    top: auto;
+    right: 0;
+    bottom: -68px;
+    transform: rotate(0);
   }
 
   .pl5 {
@@ -2183,10 +1992,6 @@ li {
     right: 0;
   }
 
-  .set__info {
-    width: 59%;
-  }
-
   .side__img {
     top: 16%;
     left: -4%;
@@ -2215,7 +2020,6 @@ li {
   }
 
   .wholesale__form {
-
     width: 340px;
   }
 
@@ -2372,7 +2176,7 @@ li {
 
   .main__title {
     width: 100%;
-    padding-bottom: 150px;
+    padding-bottom: 70px;
   }
 
   .main__question {
@@ -2478,11 +2282,6 @@ li {
     max-width: 100%;
   }
 
-
-  .steps__list {
-    flex-direction: column;
-  }
-
   .benefits__heading {
     padding-right: 40px;
   }
@@ -2502,71 +2301,6 @@ li {
 
   .feedback__reviews .white-block {
     width: 100%;
-  }
-
-  .calc__content {
-    flex-direction: column;
-  }
-
-  .calc__img {
-    margin: auto;
-  }
-
-  .aside {
-    padding-right: 74px;
-    min-width: auto;
-  }
-
-  .set__info {
-    margin-bottom: 30px;
-  }
-
-  .price {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .set__info {
-    width: 100%;
-  }
-
-  .set__side {
-    position: initial;
-    display: flex;
-    width: auto;
-    height: auto;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 50px;
-  }
-
-  .side__text,
-  .side__play {
-    position: initial;
-  }
-
-  .side__text {
-    order: 1;
-    flex-basis: 70%;
-    margin-right: 30px;
-  }
-
-  .side__play {
-    order: 2;
-    flex-basis: 22%;
-  }
-
-  .side__img {
-    top: 47%;
-    left: auto;
-    right: -40px;
-    width: 53%;
-    order: 3;
-  }
-
-  .set__list {
-    margin-bottom: 30px;
   }
 
   .maps__info {
@@ -2618,6 +2352,11 @@ li {
     width: 100%;
     max-width: 505px;
   }
+
+  .wholesale__container {
+    padding-bottom: 0;
+  }
+
 }
 
 @media (max-width: 500px) {
@@ -2659,11 +2398,13 @@ li {
   .header__logo {
     order: 2;
     flex-basis: 40%;
+
   }
 
   .header__contacts {
     order: 3;
     flex-basis: 45%;
+
   }
 
   .header__nav {
@@ -2729,10 +2470,6 @@ li {
     align-items: start;
   }
 
-  .main__content {
-    margin-bottom: 20px;
-  }
-
   .main__info {
     width: 100%;
   }
@@ -2779,6 +2516,7 @@ li {
     flex-direction: column;
   }
 
+
   .photos__img {
     left: -29px;
     top: -12px;
@@ -2811,14 +2549,6 @@ li {
 
   .feedback__video .white-block {
     max-width: 300px;
-  }
-
-  .calc__aside {
-    width: 100%;
-  }
-
-  .set__container {
-    overflow: hidden;
   }
 
   .delivery__partner {
@@ -2915,5 +2645,409 @@ li {
 
   .scheme__nine {
     margin-top: 20px;
+  }
+}
+
+
+/* !free*/
+.free {
+  background-color: var(--orange);
+  overflow: hidden;
+}
+
+.free__container {
+  padding-top: 90px;
+  padding-bottom: 60px;
+  position: relative;
+}
+
+.free__block {
+  position: relative;
+  z-index: 3;
+}
+
+.free__title {
+  margin-bottom: 59px;
+  color: var(--white);
+}
+
+.free__content {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.form__inputs {
+  display: flex;
+  gap: 15px;
+}
+
+.free__img,
+.free__info {
+  flex: 1 1 50%;
+}
+
+.free__img img {
+  display: block;
+  margin: auto;
+  min-width: 180px;
+}
+
+.free__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.free__text {
+  color: var(--white);
+  margin-bottom: 28px;
+}
+
+.free__form {
+  width: 447px;
+  gap: 6px;
+  margin-bottom: 28px;
+  z-index: 2;
+  position: inherit;
+  z-index: 2;
+}
+
+.free__form .form__inputs {
+  gap: 6px;
+}
+
+.free__btn {
+  width: 100%;
+}
+
+@media (max-width: 780px) {
+  .free__form {
+    width: auto;
+    min-width: 367px;
+  }
+}
+
+@media (max-width: 650px) {
+  .free__content {
+    flex-direction: column;
+  }
+
+  .free__img img {
+    max-width: 300px;
+  }
+
+  .free__form {
+    max-width: 505px;
+  }
+}
+
+@media (max-width: 500px) {
+  .free__content {
+    flex-direction: column;
+  }
+
+  .free__title {
+    text-align: center;
+  }
+}
+
+@media (max-width: 440px) {
+  .free__content {
+    flex-direction: column;
+  }
+}
+
+.free__form {
+  width: 100%;
+  min-width: auto;
+}
+
+/* !help*/
+.help__container {
+  padding-top: 90px;
+  padding-bottom: 60px;
+}
+
+.help__top {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  margin-bottom: 25px;
+}
+
+.help__left {
+  flex-basis: 58%;
+}
+
+.help__title {
+  margin-bottom: 24px;
+}
+
+.help__text {
+  width: 80%;
+}
+
+.border-block {
+
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 100px 30px 30px 45px;
+  border-radius: 10px;
+  border: 1px solid #DEDEDE;
+}
+
+.border-block svg,
+.border-block img {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+
+}
+
+.help__one {
+  flex-basis: 36%;
+}
+
+.help__bottom {
+  display: flex;
+  gap: 12px;
+  justify-content: space-between;
+}
+
+.help__two,
+.help__three {
+  flex-basis: 49%;
+}
+
+
+@media (max-width: 920px) {
+
+  .help__top,
+  .help__bottom {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 650px) {
+  .fs30 {
+    font-size: 24px;
+  }
+
+  .border-block svg,
+  .border-block img {
+    width: 40px;
+    height: 40px;
+
+  }
+
+  .border-block {
+    padding-top: 80px;
+  }
+}
+
+
+/* !report */
+.report__container {
+  padding-top: 76px;
+  padding-bottom: 43px;
+  max-width: 1386px;
+}
+
+.report__top {
+  display: flex;
+  margin-bottom: 80px;
+  gap: 30px;
+}
+
+.report__title {
+  flex: 1 0 50%;
+}
+
+.report__customer {
+  align-self: end;
+  flex: 1 0 50%;
+}
+
+.report__content {
+  display: flex;
+  gap: 12px;
+  margin-bottom: 68px;
+}
+
+.data {
+  flex: 1 0 49%;
+  display: flex;
+  flex-direction: column;
+  gap: 37px;
+  padding: 70px 30px 170px;
+  position: relative;
+  border-radius: 23px;
+  background: #e3f2ff99;
+}
+
+.data__total {
+  position: absolute;
+  bottom: 30px;
+  right: 100px;
+}
+
+.data__total .tooltip {
+  right: -10px;
+  top: -10px;
+}
+
+.profit {
+  flex: 1 0 49%;
+  display: flex;
+  flex-direction: column;
+  padding: 70px 30px 30px;
+  border-radius: 23px;
+  border: 1px solid #F0EEEE;
+}
+
+.profit__title {
+  margin-bottom: 48px;
+  text-align: center;
+}
+
+.cash {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: 80px;
+}
+
+.cash__money {
+  margin-top: 30px;
+}
+
+.report__shopping {
+  margin: auto;
+  justify-content: center;
+}
+
+@media (max-width: 1100px) {
+  .report__top {
+    flex-direction: column;
+  }
+
+  .report__customer {
+    max-width: 614px;
+    align-self: start;
+    flex: auto;
+  }
+}
+
+@media (max-width: 920px) {
+  .data__total {
+    right: 30px;
+  }
+}
+
+@media (max-width: 780px) {
+  .report__content,
+  .report__shopping {
+    flex-direction: column;
+  }
+
+  .report__shopping.shopping {
+    max-width: 400px;
+  }
+}
+
+
+.range {
+  width: 100%;
+  margin-top: 20px;
+  padding-top: 75px;
+}
+
+.range__content {
+  position: relative;
+  width: 100%;
+  display: grid;
+  place-items: center;
+}
+
+.range__slider {
+  width: 100%;
+  cursor: pointer;
+  height: 6px;
+  background-color: rgb(204, 204, 204);
+  overflow: hidden;
+}
+
+.range__slider-line {
+  width: 100%;
+  height: 100%;
+  background: var(--orange);
+  width: 0;
+}
+
+.range__thumb {
+  position: absolute;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  background-color: var(--orange);
+}
+
+.range__hint {
+  position: absolute;
+  left: 0;
+  top: -64px;
+  display: flex;
+  gap: 8px;
+  width: 100%;
+  justify-content: space-between;
+  align-items: flex-end;
+  text-align: center;
+}
+
+.hint__min,
+.hint__max {
+  color: var(--orange);
+}
+
+.hint__title {
+  color: var(--text_grey);
+}
+
+.range__input {
+  appearance: none;
+  width: 100%;
+  height: 16px;
+  position: absolute;
+  opacity: 0;
+}
+
+.range__input::-webkit-slider-thumb {
+  appearance: none;
+  width: 32px;
+  height: 32px;
+}
+
+.range__input::-webkit-slider-thumb:hover {
+  cursor: pointer;
+}
+
+@media (max-width: 500px) {
+  .range {
+    margin-top: 35px;
+    padding-top: 107px;
+  }
+
+  .hint__title {
+    order: -1;
+    flex-basis: 100%;
+  }
+
+  .range__hint {
+    top: -107px;
+    flex-wrap: wrap;
   }
 }
