--- a/css/style.css
+++ b/css/style.css
@@ -2383,6 +2383,9 @@ li {
     flex-direction: column;
     max-width: 266px;
   }
+  .feedback__shopping {
+    margin: auto;
+  }
 
   .main__info {
     width: 100%;
@@ -2607,11 +2610,15 @@ li {
 
   .wholesale__title {
     width: 100%;
+    position: inherit;
+    z-index: 3;
   }
 
   .wholesale__text {
     width: 100%;
     margin-bottom: 40px;
+    position: inherit;
+    z-index: 3;
   }
 
   .wholesale__form {
@@ -2865,14 +2872,47 @@ li {
     top: auto;
     left: 105px;
     margin-left: -85px;
+    margin-bottom: 8px;
+    padding: 10px;
+    min-width: fit-content;
   }
+
+  .maps__mark-8 .maps__info,
+  .maps__mark-9 .maps__info,
+  .maps__mark-10 .maps__info,
+  .maps__mark-11 .maps__info,
+  .maps__mark-12 .maps__info,
+  .maps__mark-13 .maps__info,
+  .maps__mark-14 .maps__info {
+    left: -6px;
+    right: auto;
+  }
+
+  .maps__mark-15 .maps__info,
+  .maps__mark-16 .maps__info,
+  .maps__mark-17 .maps__info,
+  .maps__mark-18 .maps__info,
+  .maps__mark-19 .maps__info {
+    right: -20px;
+  }
+
+  .maps__info .fs16 {
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .maps__info .fs25 {
+    font-size: 16px;
+    line-height: 16px;
+  }
+
 
   .human__pdf {
     width: 90px;
   }
 
-  .human .human__info {
-    font-style: 14px;
+  .human__info.fs16{
+    font-size: 12px;
   }
 
   .human__info {
