--- a/css/styleDealer.css
+++ b/css/styleDealer.css
@@ -732,6 +732,10 @@ li {
     overflow: hidden;
   }
 
+  .main__info {
+    width: 100%;
+  }
+
   .wholesale__title {
     width: 340px;
   }
@@ -771,13 +775,21 @@ li {
     right: -5px;
   }
 
+  .wholesale__container {
+    padding-bottom: 0;
+  }
+
   .wholesale__title {
     width: 100%;
+    position: inherit;
+    z-index: 3;
   }
 
   .wholesale__text {
     width: 100%;
     margin-bottom: 40px;
+    position: inherit;
+    z-index: 3;
   }
 
   .wholesale__form {
@@ -799,6 +811,9 @@ li {
   .btn {
     padding: 18px 12px;
     text-align: center;
+    max-width: 296px;
+    margin: auto;
+    display: block;
   }
 
   .container {
@@ -904,6 +919,21 @@ li {
     font-size: 32px;
   }
 
+  .main__info {
+    text-align: center;
+  }
+
+  .main__info.fs30 {
+    font-size: 24px;
+  }
+
+  .main__info.lh42 {
+    line-height: 36px;
+  }
+
+  .btn.wholesale__btn{
+    max-width: none;
+  }
   .human__pdf {
     width: 90px;
   }
