--- a/css/styleShops.css
+++ b/css/styleShops.css
@@ -473,11 +473,14 @@ li {
   color: var(--white);
 }
 
-.show__list {
-  margin-left: -25px;
-  z-index: -1;
+.show__cart {
+  z-index: 1;
 }
 
+.show__list {
+  margin-left: -25px;
+  z-index: 0;
+}
 .adress__img {
   position: relative;
   width: 100%;
